# NutriTEC_rest/Controllers/Reporte.cs
@@ -36,12 +36,27 @@ namespace NutriTEC_rest.Controllers
         {
             try
             {
-                var res = Db.ClienteProductoPublics.FromSqlInterpolated($"spGetProduct_report {Correo_cliente}");
+                var res = Db.ClienteProductoPublics.FromSqlInterpolated($"exec spGetProduct_report {Correo_cliente}");
                 return Ok(res);
             }
             catch (Exception e)
             {
                 return BadRequest(e.Message);
+            }
+        }
+        [Route("Productos/PeriodoTiempo")]
+        [HttpGet]
+        public ActionResult get(string Correo_cliente, DateTime FechaI, DateTime FechaF)
+        {
+            try
+            {
+                var res = Db.ClienteProductoPublics.FromSqlInterpolated($"exec spGetReportProductosPeriodo {Correo_cliente},{FechaI},{FechaF}");
+                return Ok(res);
+            }
+            catch (Exception e)
+            {
+                return BadRequest(e.Message);
+
             }
         }
         [Route("Recetas")]
@@ -65,7 +80,7 @@ namespace NutriTEC_rest.Controllers
         {
             try
             {
-                var res = Db.RecetaPublics.FromSqlInterpolated($"spGetReceta_report {Correo_cliente}");
+                var res = Db.RecetaPublics.FromSqlInterpolated($"exec spGetReceta_report {Correo_cliente}");
                 return Ok(res);
             }
             catch (Exception e)
@@ -80,7 +95,22 @@ namespace NutriTEC_rest.Controllers
         {
             try
             {
-                var res = Db.RecetaPublics.FromSqlInterpolated($"spGetReceta_report {Correo_cliente}").Where(W=> W.Fecha == fecha);
+                var res = Db.RecetaPublics.FromSqlInterpolated($"exec spGetReceta_report {Correo_cliente}").Where(W=> W.Fecha == fecha);
+                return Ok(res);
+            }
+            catch (Exception e)
+            {
+                return BadRequest(e.Message);
+
+            }
+        }
+        [Route("Recetas/PeriodoTiempo")]
+        [HttpGet]
+        public ActionResult get2(string Correo_cliente, DateTime FechaI, DateTime FechaF)
+        {
+            try
+            {
+                var res = Db.RecetaPublics.FromSqlInterpolated($"exec spGetReportRecetasPeriodo {Correo_cliente},{FechaI},{FechaF}");
                 return Ok(res);
             }
             catch (Exception e)
