# NutriTEC_rest/SQL_Model/Models/MenuProducto.cs
@@ -10,6 +10,7 @@ namespace NutriTEC_rest.SQL_Model.Models
         public string NombrePlanAlimentacion { get; set; }
         public string NombreMenu { get; set; }
         public string CodigoBarras { get; set; }
+        public int? Cantidad { get; set; }
 
         public virtual Producto CodigoBarrasNavigation { get; set; }
         public virtual Menu Nombre { get; set; }
